# pkg_mngr

./: .gitignore  CMakeLists.txt  main.cpp  packages.sql  pkg_mnge.pro  pkg_mngr.cbp  pkg_mngr.pro  root.sh  unfinished
editor/: mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: Category.h  CmdlineParser.h  ConfigurationAlias.h  ConfigurationOption.h  Fetch.h  FileSystem.h  Package.h  PackageDB.h  PackageManager.h  PackageMeta.h  Utils.h  Variables.h  stream.h
src/: Category.cpp  CmdlineParser.cpp  ConfigurationAlias.cpp  ConfigurationOption.cpp  Fetch.cpp  FileSystem.cpp  Package.cpp  PackageDB.cpp  PackageManager.cpp  PackageMeta.cpp  Utils.cpp  Variables.cpp  stream.cpp
